--- a/package.json
+++ b/package.json
@@ -17,15 +17,24 @@
   },
   "homepage": "https://github.com/kota-tozawa/tweet-analyzer#readme",
   "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.3",
+    "css-loader": "^5.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "reactstrap": "^8.7.1",
+    "recharts": "^1.8.5",
+    "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {}
+    "webpack-cli": "^4.2.0"
+  }
 }
