--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,11 @@
             }
         ],
         "yoda": 0,
-        "no-unused-vars": 1
+        "react/no-children-prop": 0,
+        "react/prop-types": 0,
+        "react/react-in-jsx-scope": 0,
+        "no-unused-vars": 0,
+        "no-irregular-whitespace": 1
     },
     "parserOptions": {
         "sourceType": "module"
