--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.3",
     "css-loader": "^5.0.1",
+    "formik": "^2.2.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -44,6 +47,7 @@
     "recharts": "^1.8.5",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "yup": "^0.29.3"
   }
 }
