--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.3",
     "css-loader": "^5.0.1",
-    "formik": "^2.2.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -47,7 +46,6 @@
     "recharts": "^1.8.5",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12",
-    "yup": "^0.29.3"
+    "webpack-cli": "^3.3.12"
   }
 }
