--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "Rscript main.R",
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --hot --open",
+    "dev": "webpack-dev-server --mode development --hot --open",
     "lint-fix": "./node_modules/.bin/eslint --fix --ext .js --ext .jsx ./src/"
   },
   "repository": {
