--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,15 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "prettier.singleQuote": true,
   // インポートパス自動更新
   "javascript.updateImportsOnFileMove.enabled": "always",
   // インデント関連の設定
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
-  "editor.detectIndentation": false,
+  "editor.detectIndentation": false
 }
