--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-loader": "^8.1.0",
     "clsx": "^1.1.1",
     "css-loader": "^5.0.1",
+    "formik": "^2.2.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -55,6 +56,7 @@
     "recharts": "^1.8.5",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "yup": "^0.32.1"
   }
 }
