--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-wordcloud": "^1.2.7",
     "reactstrap": "^8.7.1",
     "recharts": "^1.8.5",
     "style-loader": "^2.0.0",
+    "tippy.js": "^6.2.7",
     "webpack": "^5.4.0",
     "webpack-cli": "^3.3.12",
     "yup": "^0.32.1"
