--- a/.textlintrc
+++ b/.textlintrc
@@ -16,6 +16,7 @@
       }
     },
     "preset-ja-technical-writing": true,
-    "ja-technical-writing/sentence-length": false
+    "ja-technical-writing/sentence-length": false,
+    "ja-technical-writing/ja-no-mixed-period": false
   }
 }
